# CoralModelConvert

./: .dockerignore  .gitignore  Dockerfile  README.md  bootstrap  docker-compose.yml  pyproject.toml  requirements.txt  run.py  s.yaml
.github/workflows/: build.yml  deploy.yml
coral_model_convert/: __init__.py  adapter.py  config.py  error_handlers.py  exceptions.py  main.py  models.py  tasks.py
coral_model_convert/api/: __init__.py  conversion.py
coral_model_convert/converters/: __init__.py  rknn_converter.py
coral_model_convert/utils/: cloud.py
fc-yaml/templates/: .env.example  README.md  s-onnx2rknn.template.yaml
